--- a/front-end/src/app.html
+++ b/front-end/src/app.html
@@ -9,16 +9,14 @@
                 rel="stylesheet"
                 href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700"
         />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@500&display=swap" rel="stylesheet">
         <link
                 rel="stylesheet"
                 href="https://fonts.googleapis.com/css?family=Roboto+Mono"
         />
-        <link rel="stylesheet" href="/smui.css" media="(prefers-color-scheme: light)" />
-        <link
-                rel="stylesheet"
-                href="/smui-dark.css"
-                media="screen and (prefers-color-scheme: dark)"
-        />
+        <link rel="stylesheet" href="/smui-dark.css"/>
 		<meta charset="utf-8" />
 		<meta name="description" content="" />
 		<link rel="icon" href="%svelte.assets%/favicon.png" />
