add footer info, small fixes

--- a/front-end/src/app.html
+++ b/front-end/src/app.html
@@ -21,6 +21,6 @@
 		%svelte.head%
 	</head>
 	<body>
-		<div id="svelte">%svelte.body%</div>
+		<div class="relative h-full min-h-screen" id="svelte">%svelte.body%</div>
 	</body>
 </html>
