add amount of participants, fix how they being displayed

--- a/front-end/src/app.html
+++ b/front-end/src/app.html
@@ -15,12 +15,12 @@
         />
         <link rel="stylesheet" href="/smui-dark.css"/>
 		<meta charset="utf-8" />
-        <link rel="icon" href="%svelte.assets%/favicon.png" />
+        <link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="description" content="" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		%svelte.head%
+		%sveltekit.head%
 	</head>
 	<body>
-		<div class="relative h-full min-h-screen" id="svelte">%svelte.body%</div>
+		<div class="relative h-full min-h-screen" id="svelte">%sveltekit.body%</div>
 	</body>
 </html>
