fix modal (omg)

--- a/front-end/src/app.html
+++ b/front-end/src/app.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
-	<head>
-		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-		<link
-			rel="stylesheet"
-			href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700"
-		/>
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono" />
-		<link rel="stylesheet" href="/smui-dark.css" />
-		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<meta name="description" content="" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		%sveltekit.head%
-	</head>
-	<body>
-		<div class="relative h-full min-h-screen" id="svelte">%sveltekit.body%</div>
-	</body>
+<html lang='en'>
+<head>
+	<link rel='stylesheet' href='https://fonts.googleapis.com/icon?family=Material+Icons' />
+	<link
+		rel='stylesheet'
+		href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700'
+	/>
+	<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto+Mono' />
+	<link rel='stylesheet' href='/smui.css' />
+	<meta charset='utf-8' />
+	<link rel='icon' href='%sveltekit.assets%/favicon.png' />
+	<meta name='description' content='' />
+	<meta name='viewport' content='width=device-width, initial-scale=1' />
+	%sveltekit.head%
+</head>
+<body>
+<div class='relative h-full min-h-screen' id='svelte'>%sveltekit.body%</div>
+</body>
 </html>
